--- a/envoy.yaml
+++ b/envoy.yaml
@@ -7,7 +7,7 @@ static_resources:
   listeners:
     - name: listener_0
       address:
-        socket_address: { address: 0.0.0.0, port_value: 8080 }
+        socket_address: { address: 0.0.0.0, port_value: 8081 }
       filter_chains:
         - filters:
             - name: envoy.filters.network.http_connection_manager
@@ -35,10 +35,20 @@ static_resources:
                         allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                         max_age: "1728000"
                         expose_headers: custom-header-1,grpc-status,grpc-message
+                # http_filters:
+                #   - name: envoy.filters.http.grpc_web
+                #   - name: envoy.filters.http.cors
+                #   - name: envoy.filters.http.router
                 http_filters:
-                  - name: envoy.filters.http.grpc_web
-                  - name: envoy.filters.http.cors
-                  - name: envoy.filters.http.router
+                - name: envoy.filters.http.grpc_web
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
+                - name: envoy.filters.http.cors
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
+                - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
   clusters:
     - name: chat_service
       connect_timeout: 0.25s
@@ -57,4 +67,4 @@ static_resources:
                   address:
                     socket_address:
                       address: host.docker.internal
-                      port_value: 9090
+                      port_value: 8080
