--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "google-protobuf": "^3.21.0",
+    "grpc": "^1.24.11",
     "grpc-web": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
