--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -19,8 +19,11 @@
     },
     "content_scripts":[
         {
-            "matches": ["<all_urls>"],
+             "matches": ["http://*/*", "https://*/*"],
             "js": ["contentScript.js"]
         }
+    ],
+    "permissions": [
+            "storage", "tabCapture", "alarms", "notifications"
     ]
 }
