--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -7,7 +7,7 @@ plugins:
     # With target=ts, we generate TypeScript files.
     # Use target=js+dts to generate JavaScript and TypeScript declaration files
     # like remote generation does.
-   ≈
+    opt: target=js
   - name: connect-web
     out: gen
     # With target=ts, we generate TypeScript files.
