add inpage script

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -32,7 +32,14 @@
         }
     ],
     "web_accessible_resources": [
-        "inpage.js"
+        {
+            "resources": [
+                "inpage.js"
+            ],
+            "matches": [
+                "<all_urls>"
+            ]
+        }
     ],
     "permissions": [
         "tabs",
