--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@bufbuild/connect-web": "^0.2.1",
-    "@bufbuild/protobuf": "^0.1.1",
-    "moment": "^2.29.4",
-    "path": "^0.12.7",
+    "@buf/bufbuild_connect-web_penumbra-zone_penumbra": "^1.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -14,8 +11,7 @@
   },
   "scripts": {
     "start": "webpack --watch --progress --config webpack.dev.js",
-    "build": "webpack --watch --progress --config webpack.prod.js",
-    "buf:generate": "buf generate"
+    "build": "webpack --watch --progress --config webpack.prod.js"
   },
   "eslintConfig": {
     "extends": [
@@ -36,13 +32,7 @@
     ]
   },
   "devDependencies": {
-    "@bufbuild/protoc-gen-connect-web": "^0.2.1",
-    "@bufbuild/protoc-gen-es": "^0.1.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "@types/chrome": "^0.0.196",
-    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -50,7 +40,6 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "process": "^0.11.10",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.4.2",
